--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
